<resources>
    <string name="app_name">JADBudget - Dev</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_options">Options\n</string>
    <string name="label">Libellé</string>
    <string name="amount">Montant</string>
    <string name="delete">Supprimer</string>
    <string name="save">Enregistrer</string>
    <string name="add_account">Ajouter un compte</string>
    <string name="add_element">Ajouter un élément</string>
    <string name="period">Période</string>
    <string name="add_period">Ajouter une période</string>
    <string name="period_selected">Période sélectionnée</string>
    <string name="error_period_exists">Une période à cette date existe déjà.</string>
    <string name="element">Element</string>
    <string name="models">Modèles</string>
    <string name="gestion">Gestion des données</string>
    <string name="manage_accounts">Gestion des comptes</string>
    <string name="accounts_list">Liste des comptes</string>
    <string name="manage_periods">Gestion des périodes</string>
    <string name="periods_list">Liste des périodes</string>
    <string name="period_disclaimer">La suppression de la période entraine la suppression des données de prélèvement/revenu/dépense associées.</string>
    <string name="model_invoice">Modèle de prélèvement</string>
    <string name="model_income">Modèle de revenu</string>
    <string name="list_modelincome">Liste des revenus</string>
    <string name="list_modelinvoice">Liste des prélèvements</string>
    <string name="confirm_deleteperiod">Supprimer une période</string>
    <string name="confirm_deleteperiod_txt">Vous vous apprêtez à supprimer une période.\nLes données de prélèvements, de dépense, et de revenus associés à cette période seront définitivement supprimées.\n\nEtes vous sûr de vouloir continuer ?</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="add_invoice">Ajouter un prélèvement</string>
    <string name="add_income">Ajouter un revenu</string>
    <string name="add_expense">Ajouter une dépense</string>
    <string name="import_export_data">Importer/Exporter des données</string>
    <string name="connection">Connexion</string>
    <string name="invoices">Prélèvements</string>
    <string name="income">Revenus</string>
    <string name="expenses">Dépenses</string>
    <string name="data_type">Type de donnée</string>
    <string name="external_datas">Données externes</string>
    <string name="search_hint">Rechercher...</string>
    <string name="categories">Catégories</string>
    <string name="label_category">Label catégorie</string>
    <string name="add">Ajouter</string>
    <string name="add_category">Ajouter une catégorie</string>
    <string name="list_of_categories">Liste des catégories</string>
    <string name="category">Catégorie</string>
    <string name="categorize">Catégoriser</string>
    <string name="expenses_chart">Graphique des dépenses</string>
    <string name="undefined">Non défini</string>
    <string name="empty_transactions">Aucune transaction à afficher.</string>

</resources>