<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="fr.jadeveloppement.budgetsjad.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.jadeveloppement.budgetsjad.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="fr.jadeveloppement.budgetsjad.ui.notifications.NotificationsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_modeleincome"
        android:name="fr.jadeveloppement.budgetsjad.ui.model.modelincome.ModeleIncomesFragment"
        android:label="@string/models"
        tools:layout="@layout/fragment_modeleincomes" />

    <fragment
        android:id="@+id/navigation_modeleinvoice"
        android:name="fr.jadeveloppement.budgetsjad.ui.model.modelinvoice.ModeleInvoicesFragment"
        android:label="@string/models"
        tools:layout="@layout/fragment_modeleinvoices" />

    <fragment
        android:id="@+id/navigation_manageExternalDatas"
        android:name="fr.jadeveloppement.budgetsjad.ui.external.ManageExternalDatas"
        android:label="@string/models"
        tools:layout="@layout/fragment_manage_external_datas" />
</navigation>