<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box_border"
            android:orientation="vertical"
            android:padding="@dimen/paddingM"
            android:layout_marginBottom="@dimen/paddingXL">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange1"
                android:textStyle="bold"
                android:text="@string/data_type"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoices"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_invoice"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_income"/>

        </LinearLayout>

        <EditText
            android:id="@+id/manageloginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Identifiant"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/paddingM"/>

        <EditText
            android:id="@+id/manageloginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Identifiant"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/paddingXL"/>

        <Button
            android:id="@+id/manageloginConnectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange1"
            android:textColor="@color/white"
            android:text="Connexion"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/manageloginLoadingScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#A0FFFFFF"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>