<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingVertical="@dimen/paddingM"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/paddingXL">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="@dimen/paddingM">

            <ImageView
                android:id="@+id/popupContentAccountIconTitle"
                android:layout_width="@dimen/iconXL"
                android:layout_height="@dimen/iconXL"
                android:background="@drawable/add_element" />

        </LinearLayout>

        <TextView
            android:id="@+id/popupContentAccountTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/add_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange1"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/popupContentAccountBtnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="@dimen/paddingM">

            <ImageView
                android:layout_width="@dimen/iconM"
                android:layout_height="@dimen/iconM"
                android:background="@drawable/close" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/popupContentAccountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:layout_marginBottom="@dimen/paddingM"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/popupContentAccountAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:layout_marginBottom="@dimen/paddingM"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"/>

    <Button
        android:id="@+id/popupContentAccountBtnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange1"
        android:text="@string/save"/>

    <Button
        android:id="@+id/popupContentAccountBtnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red1"
        android:textColor="@color/white"
        android:text="@string/delete"/>

</LinearLayout>