<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingVertical="@dimen/paddingM"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/paddingXL">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/paddingM">

            <ImageView
                android:layout_width="@dimen/iconL"
                android:layout_height="@dimen/iconL"
                android:background="@drawable/alert"/>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/confirm_deleteperiod"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange1"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/popupContentConfirmDeleteBtnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="@dimen/paddingM">

            <ImageView
                android:layout_width="@dimen/iconM"
                android:layout_height="@dimen/iconM"
                android:background="@drawable/close" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingM"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/confirm_deleteperiod_txt"
            android:layout_marginBottom="@dimen/paddingL"/>

        <Button
            android:id="@+id/popupContentConfirmDeleteBtnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/red1"
            android:text="@string/confirm"/>

        <Button
            android:id="@+id/popupContentConfirmDeleteBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>